_sass/_page.scss
.page-cover {
  height: 80vh;
  width: 100%;
  background-size: cover;
  background-position: center;
  background-color: rgba($brand-color, 0.5);

  &:before {
      content: "";
      background-image: url(../assets/img/bg/bg-splash.png);
      background-position: 40%;
      background-size: cover;
      background-repeat: no-repeat;
      height: 60vh;
      width: 100%;
      position: absolute;
    }
}

.acts {
  display: flex;
  justify-content: center;

  .act {
    position: relative;
    cursor: pointer;
    width: calc(100%/3);
    padding-top: calc(100%/3);

    @include media-query($on-palm) {
      width: 100%;
      padding-top: 100%;
    }

    &:hover {
      opacity: 0.8;
    }

    .act-wrapper {
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background-repeat: no-repeat;
      background-size: contain;
    }
    .act-content {
      display: none;
    }

    &.show {
      &:hover {
        opacity: 1;
      }
      .act-content {
        display: block;
        position: fixed;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        background-color: $brand-color;
        padding: 30px;
        padding-top: 100px;
        padding-bottom: 100px;
        color: white;
        overflow-y: scroll;

        .act-contentClose {
          padding: 1em 2em;
          background-color: lighten($brand-color, 5);
          border-radius: 30em;
          text-align: center;
          display: block;
          clear:left;
          max-width: 200px;
          margin: 0 auto;

        }
      }
    }
  }
}

